# odev

./: .gitignore  CHANGELOG.md  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  GUIA_INICIO.md  IMPROVEMENTS.md  ISSUES_FOUND.md  README.md  ROADMAP.md  VERSIONING.md  pyproject.toml
docs/: IMPROVEMENT-PLAN.md  guia-de-uso.md
docs/sdd/: design.md  proposal.md  spec.md  tasks.md
src/odev/: __init__.py  main.py
src/odev/commands/: __init__.py  _helpers.py  _odoo_shell.py  _wizards.py  addons.py  adopt.py  context.py  db.py  doctor.py  down.py  enterprise.py  init.py  install.py  load_backup.py  logs.py  mcp.py  migrate.py  model_info.py  modules.py  projects.py  py.py  reconfigure.py  reset_db.py  restart.py  scaffold.py  self_update.py  shell.py  sql.py  status.py  sync_config.py  test.py  tui.py  up.py  update.py
tests/: __init__.py  conftest.py  test_addons.py  test_adopt.py  test_compat.py  test_concurrency.py  test_config.py  test_config_addon_mounts.py  test_context_cmd.py  test_context_execute.py  test_db.py  test_detect.py  test_docker.py  test_doctor.py  test_doctor_execute.py  test_down.py  test_enterprise.py  test_enterprise_cmd.py  test_helpers.py  test_init.py  test_load_backup.py  test_logs.py  test_logs_execute.py  test_main.py  test_mcp_server.py  test_migrate.py  test_model_info.py  test_model_info_execute.py  test_modules_cmd.py  test_modules_execute.py  test_neutralize.py  test_odoo_log_filter.py  test_paths.py  test_ports.py  test_preflight.py  test_project.py  test_project_info_widget.py  test_projects.py  test_py_banner.py  test_py_cmd.py  (+22 more)
(+51 files in other folders)
